Remove text content from location container

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
       <!-- Location details -->
       <div id="location-container" class="cta col-span-4 row-span-2 md:items-center md:justify-between md:w-full md:p-4">
         <div class="text-center md:text-left">
-          <p id="location" class="text-2xl/10 md:text-3xl/12 font-bold">Berlin, Germany</p>
-          <p id="time" class="text-tneutral-200 text-sm md:text-base">Tuesday, Aug 5, 2025</p>
+          <p id="location" class="text-2xl/10 md:text-3xl/12 font-bold"></p>
+          <p id="time" class="text-tneutral-200 text-sm md:text-base"></p>
         </div>
         <div class="flex items-center justify-between md:w-[32%]">
           <img id="location-icon" src="assets/images/icon-sunny.webp" alt="sun" class="w-[45%]">
-          <p class="font-semibold font-bricolage text-7xl"><span id="current-temp" class="italic">68 </span>°</p>
+          <p class="font-semibold font-bricolage text-7xl"><span id="current-temp" class="italic"> </span>°</p>
         </div>
       </div>
       
