--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="assets/images/icon-dropdown.svg" alt="dropdown">
       </button>
       <ul class="menu" id="nav-dropdown-menu">
-        <button id="unit-toggle" class="text-base cursor-pointer focus:outline-1 outline-offset-1 units">Switch to Imperial</button>
+        <button id="unit-toggle" class="text-base cursor-pointer focus:outline-1 outline-offset-1 units"></button>
         <li class="text-tneutral-300 units">Temperature</li>
         <li class="units cursor-pointer" data-type="temp" data-value="c">Celsius (°C)</li>
         <li class="units cursor-pointer" data-type="temp" data-value="f">Fahrenheit (°F)</li>
