Remove styles from head

--- a/index.html
+++ b/index.html
@@ -15,12 +15,6 @@
   <link rel="stylesheet" href="src/output.css">
   
   <title>Frontend Mentor | Weather app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body class="bg-tneutral-900 text-tneutral-0">
   <header class="rule">
@@ -151,9 +145,9 @@
     </section>
   </main>
 
-  <footer class="attribution font-dm-sans">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="github.com/Tjay05">Your Name Here</a>.
+  <footer class="text-center text-sm font-dm-sans">
+    Challenge by <a class="text-[#3e52a3]" href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+    Coded by <a class="text-[#3e52a3]" href="github.com/Tjay05">Olatayo Tijesu</a>.
   </footer>
 
   <script defer src="src/index.js"></script>
